updating our details

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
+      <p>I am an aspiring Software Developer.</p>
+      <h1>I am from Boston Massachusetts</h1>
       <p>Details here...</p>
-      <h1>Where I'm From</h1>
-      <p>Details here...</p>
-      <h1>What are your favorite hobbies?</h1>
+      <h1>I enjoy playing gutiar, playing video games, and watching movies and or tv shows!</h1>
       <p>Details here...</p>
       <h1>What's your dream job?</h1>
       <p>Details here...</p>
-      <h1>Where do you live?</h1>
+      <h1>I live in Acton Massachusetts</h1>
       <p>Details here...</p>
       <h1>Why do you want to be a web developer?</h1>
       <p>Details here...</p>
