updating my details

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am an aspiring Software Developer.</p>
-      <h1>I am from Boston Massachusetts</h1>
-      <p>Details here...</p>
-      <h1>I enjoy playing gutiar, playing video games, and watching movies and or tv shows!</h1>
-      <p>Details here...</p>
+      <p>My name is Alex and I am an aspiring Web Developer who is eager to learn</p>
+      <h1>Where I am from</h1>
+      <p>Originaly born in South Korea I moved to the United States when I was just a baby.</p>
+      <h1>What are my hobbies?</h1>
+      <p>I love to play video games and play guitar. I also enjoy learning about the latest technology and trends.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
-      <h1>I live in Acton Massachusetts</h1>
-      <p>Details here...</p>
+      <p>I hope that one day I will be a full time developer.</p>
+      <h1>Where do you live?</h1>
+      <p>I live 20 minutes outside Boston, Massachusetts in a town called Acton.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>It amazes me what people have been able to accomplish in the last 20 years as I've watched the internet and technology progress. It would be a dream come true to be a part of it's progression!</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/acballard">Github</a></li>
         </ul>
     </footer>
 </body>
